# neural-network-impl

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
neural_network/: activations.py  layer.py  loss.py  network.py
tests/: test_results.py
